--- a/src/filling.html
+++ b/src/filling.html
@@ -30,7 +30,7 @@
                                             Отделка
                                         </div>
                                         <div class="aside-constructor__item-price">
-                                            <span>20 763 162</span> ₸ 
+                                            <span>20 763 162</span> &#8376; 
                                         </div>
                                     </div>    
                                     <div class="aside-constructor__item _active">
@@ -38,7 +38,7 @@
                                             Наполнение
                                         </div>
                                         <div class="aside-constructor__item-price">
-                                            <span>154 019</span> ₸ 
+                                            <span>154 019</span> &#8376; 
                                         </div>
                                     </div>    
                                     <div class="aside-constructor__item">
@@ -46,7 +46,7 @@
                                             Техника
                                         </div>
                                         <div class="aside-constructor__item-price">
-                                            <span>753 012</span> ₸  
+                                            <span>753 012</span> &#8376;  
                                         </div>
                                     </div>    
                                 </div>
@@ -66,10 +66,10 @@
                                             </div>
                                             <div class="filling-product__price">
                                                 <div class="filling-product__price-new">
-                                                    15 000 ₸
+                                                    15 000 &#8376;
                                                 </div>
                                                 <div class="filling-product__price-old">
-                                                    22 500 ₸
+                                                    22 500 &#8376;
                                                 </div>
                                             </div>
                                         </div>
@@ -87,10 +87,10 @@
                                             </div>
                                             <div class="filling-product__price">
                                                 <div class="filling-product__price-new">
-                                                    15 000 ₸
+                                                    15 000 &#8376;
                                                 </div>
                                                 <div class="filling-product__price-old">
-                                                    22 500 ₸
+                                                    22 500 &#8376;
                                                 </div>
                                             </div>
                                         </div>
@@ -203,10 +203,10 @@
                                         </div>
                                         <div class="filling-item__price">
                                             <div class="filling-item__price-new">
-                                                82 590 ₸
+                                                82 590 &#8376;
                                             </div>
                                             <div class="filling-item__price-old">
-                                                109 900 ₸.
+                                                109 900 &#8376;.
                                             </div>
                                         </div>
                                         <div class="filling-item__quantity">
@@ -241,10 +241,10 @@
                                         </div>
                                         <div class="filling-item__price">
                                             <div class="filling-item__price-new">
-                                                82 590 ₸
+                                                82 590 &#8376;
                                             </div>
                                             <div class="filling-item__price-old">
-                                                109 900 ₸.
+                                                109 900 &#8376;.
                                             </div>
                                         </div>
                                         <button class="filling-item__add button button1">
@@ -266,10 +266,10 @@
                                         </div>
                                         <div class="filling-item__price">
                                             <div class="filling-item__price-new">
-                                                82 590 ₸
+                                                82 590 &#8376;
                                             </div>
                                             <div class="filling-item__price-old">
-                                                109 900 ₸.
+                                                109 900 &#8376;.
                                             </div>
                                         </div>
                                         <div class="filling-item__quantity">
@@ -304,10 +304,10 @@
                                         </div>
                                         <div class="filling-item__price">
                                             <div class="filling-item__price-new">
-                                                82 590 ₸
+                                                82 590 &#8376;
                                             </div>
                                             <div class="filling-item__price-old">
-                                                109 900 ₸.
+                                                109 900 &#8376;.
                                             </div>
                                         </div>
                                         <div class="filling-item__quantity">
@@ -342,10 +342,10 @@
                                         </div>
                                         <div class="filling-item__price">
                                             <div class="filling-item__price-new">
-                                                82 590 ₸
+                                                82 590 &#8376;
                                             </div>
                                             <div class="filling-item__price-old">
-                                                109 900 ₸.
+                                                109 900 &#8376;.
                                             </div>
                                         </div>
                                         <div class="filling-item__quantity">
@@ -380,10 +380,10 @@
                                         </div>
                                         <div class="filling-item__price">
                                             <div class="filling-item__price-new">
-                                                82 590 ₸
+                                                82 590 &#8376;
                                             </div>
                                             <div class="filling-item__price-old">
-                                                109 900 ₸.
+                                                109 900 &#8376;.
                                             </div>
                                         </div>
                                         <div class="filling-item__quantity">
@@ -418,10 +418,10 @@
                                         </div>
                                         <div class="filling-item__price">
                                             <div class="filling-item__price-new">
-                                                82 590 ₸
+                                                82 590 &#8376;
                                             </div>
                                             <div class="filling-item__price-old">
-                                                109 900 ₸.
+                                                109 900 &#8376;.
                                             </div>
                                         </div>
                                         <div class="filling-item__quantity">
@@ -456,10 +456,10 @@
                                         </div>
                                         <div class="filling-item__price">
                                             <div class="filling-item__price-new">
-                                                82 590 ₸
+                                                82 590 &#8376;
                                             </div>
                                             <div class="filling-item__price-old">
-                                                109 900 ₸.
+                                                109 900 &#8376;.
                                             </div>
                                         </div>
                                         <div class="filling-item__quantity">
@@ -495,14 +495,14 @@
                         <div class="total__inner">
                             <div class="total__price">
                                 <div class="total__price-discount">
-                                    Итого с учетом скидок вы экономите 143 754 ₸ 
+                                    Итого с учетом скидок вы экономите 143 754 &#8376; 
                                 </div>
                                 <div class="total__price-wrapper">
                                     <div class="total__price-new">
-                                        21 670 193 ₸
+                                        21 670 193 &#8376;
                                     </div>
                                     <div class="total__price-old">
-                                        21 813 947 ₸
+                                        21 813 947 &#8376;
                                     </div>
                                 </div>
                             </div>
@@ -513,7 +513,7 @@
                                     </div>
                                     <div class="total__item-price">
                                         <div class="total__item-price-new">
-                                            20 763 162 ₸ 
+                                            20 763 162 &#8376; 
                                         </div>
                                     </div>
                                 </li>
@@ -523,10 +523,10 @@
                                     </div>
                                     <div class="total__item-price">
                                         <div class="total__item-price-new">
-                                            154 019 ₸ 
+                                            154 019 &#8376; 
                                         </div>
                                         <div class="total__item-price-old">
-                                            168 370 ₸
+                                            168 370 &#8376;
                                         </div>
                                     </div>
                                 </li>
@@ -536,10 +536,10 @@
                                     </div>
                                     <div class="total__item-price">
                                         <div class="total__item-price-new">
-                                            753 012 ₸ 
+                                            753 012 &#8376; 
                                         </div>
                                         <div class="total__item-price-old">
-                                            828 370 ₸
+                                            828 370 &#8376;
                                         </div>
                                     </div>
                                 </li>
@@ -561,7 +561,7 @@
                                             SmartRemont: 
                                         </div>
                                         <div class="total-mob__list-price">
-                                            <div class="total-mob__list-price-new">20 763 162 ₸</div>
+                                            <div class="total-mob__list-price-new">20 763 162 &#8376;</div>
                                         </div>
                                     </li>
                                     <li>
@@ -569,8 +569,8 @@
                                             Наполнение
                                         </div>
                                         <div class="total-mob__list-price">
-                                            <div class="total-mob__list-price-new">154 019 ₸</div>
-                                            <div class="total-mob__list-price-old">184 200 ₸</div>
+                                            <div class="total-mob__list-price-new">154 019 &#8376;</div>
+                                            <div class="total-mob__list-price-old">184 200 &#8376;</div>
                                         </div>
                                     </li>
                                     <li>
@@ -578,8 +578,8 @@
                                             Техника
                                         </div>
                                         <div class="total-mob__list-price">
-                                            <div class="total-mob__list-price-new">753 012 ₸</div>
-                                            <div class="total-mob__list-price-old">753 012 ₸</div>
+                                            <div class="total-mob__list-price-new">753 012 &#8376;</div>
+                                            <div class="total-mob__list-price-old">753 012 &#8376;</div>
                                         </div>
                                     </li>
                                     <li>
@@ -587,8 +587,8 @@
                                             Техника
                                         </div>
                                         <div class="total-mob__list-price">
-                                            <div class="total-mob__list-price-new">753 012 ₸</div>
-                                            <div class="total-mob__list-price-old">753 012 ₸</div>
+                                            <div class="total-mob__list-price-new">753 012 &#8376;</div>
+                                            <div class="total-mob__list-price-old">753 012 &#8376;</div>
                                         </div>
                                     </li>
                                     <li>
@@ -596,8 +596,8 @@
                                             Техника
                                         </div>
                                         <div class="total-mob__list-price">
-                                            <div class="total-mob__list-price-new">753 012 ₸</div>
-                                            <div class="total-mob__list-price-old">753 012 ₸</div>
+                                            <div class="total-mob__list-price-new">753 012 &#8376;</div>
+                                            <div class="total-mob__list-price-old">753 012 &#8376;</div>
                                         </div>
                                     </li>
                                     <li>
@@ -605,8 +605,8 @@
                                             Техника
                                         </div>
                                         <div class="total-mob__list-price">
-                                            <div class="total-mob__list-price-new">753 012 ₸</div>
-                                            <div class="total-mob__list-price-old">753 012 ₸</div>
+                                            <div class="total-mob__list-price-new">753 012 &#8376;</div>
+                                            <div class="total-mob__list-price-old">753 012 &#8376;</div>
                                         </div>
                                     </li>
                                     <li>
@@ -614,8 +614,8 @@
                                             Техника
                                         </div>
                                         <div class="total-mob__list-price">
-                                            <div class="total-mob__list-price-new">753 012 ₸</div>
-                                            <div class="total-mob__list-price-old">753 012 ₸</div>
+                                            <div class="total-mob__list-price-new">753 012 &#8376;</div>
+                                            <div class="total-mob__list-price-old">753 012 &#8376;</div>
                                         </div>
                                     </li>
                                     <li>
@@ -623,8 +623,8 @@
                                             Техника
                                         </div>
                                         <div class="total-mob__list-price">
-                                            <div class="total-mob__list-price-new">753 012 ₸</div>
-                                            <div class="total-mob__list-price-old">753 012 ₸</div>
+                                            <div class="total-mob__list-price-new">753 012 &#8376;</div>
+                                            <div class="total-mob__list-price-old">753 012 &#8376;</div>
                                         </div>
                                     </li>
                                     <li>
@@ -632,8 +632,8 @@
                                             Техника
                                         </div>
                                         <div class="total-mob__list-price">
-                                            <div class="total-mob__list-price-new">753 012 ₸</div>
-                                            <div class="total-mob__list-price-old">753 012 ₸</div>
+                                            <div class="total-mob__list-price-new">753 012 &#8376;</div>
+                                            <div class="total-mob__list-price-old">753 012 &#8376;</div>
                                         </div>
                                     </li>
                                 </ul>
@@ -646,14 +646,14 @@
                                 </div>
                                 <div class="total-mob__price">
                                     <div class="total-mob__price-new">
-                                        21 670 193 ₸
+                                        21 670 193 &#8376;
                                     </div>
                                     <div class="total-mob__price-old">
-                                        21 813 947 ₸
+                                        21 813 947 &#8376;
                                     </div>
                                 </div>
                                 <div class="total-mob__discount">
-                                    Вы экономите 143 754 ₸ 
+                                    Вы экономите 143 754 &#8376; 
                                 </div>
                             </div>
                             <button class="total-mob__next button button1">
