--- a/src/finishing-floor.html
+++ b/src/finishing-floor.html
@@ -30,7 +30,7 @@
                                             Отделка
                                         </div>
                                         <div class="aside-constructor__item-price">
-                                            <span>20 763 162</span> ₸ 
+                                            <span>20 763 162</span> &#8376; 
                                         </div>
                                     </div>    
                                     <div class="aside-constructor__item">
@@ -38,7 +38,7 @@
                                             Наполнение
                                         </div>
                                         <div class="aside-constructor__item-price">
-                                            <span>154 019</span> ₸ 
+                                            <span>154 019</span> &#8376; 
                                         </div>
                                     </div>    
                                     <div class="aside-constructor__item">
@@ -46,7 +46,7 @@
                                             Техника
                                         </div>
                                         <div class="aside-constructor__item-price">
-                                            <span>753 012</span> ₸  
+                                            <span>753 012</span> &#8376;  
                                         </div>
                                     </div>    
                                 </div>
@@ -71,10 +71,10 @@
                                                 </div>
                                                 <div class="finishing__item-price">
                                                     <div class="finishing__item-price-new">
-                                                        20 763 162 ₸
+                                                        20 763 162 &#8376;
                                                     </div>
                                                     <div class="finishing__item-price-meter">
-                                                        123 900 ₸/м²
+                                                        123 900 &#8376;/м²
                                                     </div>
                                                 </div>
                                             </div>
@@ -95,10 +95,10 @@
                                                 </div>
                                                 <div class="finishing__item-price">
                                                     <div class="finishing__item-price-new">
-                                                        20 763 162 ₸
+                                                        20 763 162 &#8376;
                                                     </div>
                                                     <div class="finishing__item-price-meter">
-                                                        123 900 ₸/м²
+                                                        123 900 &#8376;/м²
                                                     </div>
                                                 </div>
                                             </div>
@@ -196,7 +196,7 @@
                                                 </div>
                                                 <div class="finishing__select-wrapper">
                                                     <div class="finishing__select-meter">
-                                                        123 900 ₸/метр
+                                                        123 900 &#8376;/метр
                                                     </div>
                                                     <div class="packs__cost">
                                                         <div class="packs__cost-icon _active">
@@ -399,14 +399,14 @@
                         <div class="total__inner">
                             <div class="total__price">
                                 <div class="total__price-discount">
-                                    Итого с учетом скидок вы экономите 143 754 ₸ 
+                                    Итого с учетом скидок вы экономите 143 754 &#8376; 
                                 </div>
                                 <div class="total__price-wrapper">
                                     <div class="total__price-new">
-                                        21 670 193 ₸
+                                        21 670 193 &#8376;
                                     </div>
                                     <div class="total__price-old">
-                                        21 813 947 ₸
+                                        21 813 947 &#8376;
                                     </div>
                                 </div>
                             </div>
@@ -417,7 +417,7 @@
                                     </div>
                                     <div class="total__item-price">
                                         <div class="total__item-price-new">
-                                            20 763 162 ₸ 
+                                            20 763 162 &#8376; 
                                         </div>
                                     </div>
                                 </li>
@@ -427,10 +427,10 @@
                                     </div>
                                     <div class="total__item-price">
                                         <div class="total__item-price-new">
-                                            154 019 ₸ 
+                                            154 019 &#8376; 
                                         </div>
                                         <div class="total__item-price-old">
-                                            168 370 ₸
+                                            168 370 &#8376;
                                         </div>
                                     </div>
                                 </li>
@@ -440,10 +440,10 @@
                                     </div>
                                     <div class="total__item-price">
                                         <div class="total__item-price-new">
-                                            753 012 ₸ 
+                                            753 012 &#8376; 
                                         </div>
                                         <div class="total__item-price-old">
-                                            828 370 ₸
+                                            828 370 &#8376;
                                         </div>
                                     </div>
                                 </li>
@@ -465,7 +465,7 @@
                                             SmartRemont: 
                                         </div>
                                         <div class="total-mob__list-price">
-                                            <div class="total-mob__list-price-new">20 763 162 ₸</div>
+                                            <div class="total-mob__list-price-new">20 763 162 &#8376;</div>
                                         </div>
                                     </li>
                                     <li>
@@ -473,8 +473,8 @@
                                             Наполнение
                                         </div>
                                         <div class="total-mob__list-price">
-                                            <div class="total-mob__list-price-new">154 019 ₸</div>
-                                            <div class="total-mob__list-price-old">184 200 ₸</div>
+                                            <div class="total-mob__list-price-new">154 019 &#8376;</div>
+                                            <div class="total-mob__list-price-old">184 200 &#8376;</div>
                                         </div>
                                     </li>
                                     <li>
@@ -482,8 +482,8 @@
                                             Техника
                                         </div>
                                         <div class="total-mob__list-price">
-                                            <div class="total-mob__list-price-new">753 012 ₸</div>
-                                            <div class="total-mob__list-price-old">753 012 ₸</div>
+                                            <div class="total-mob__list-price-new">753 012 &#8376;</div>
+                                            <div class="total-mob__list-price-old">753 012 &#8376;</div>
                                         </div>
                                     </li>
                                     <li>
@@ -491,8 +491,8 @@
                                             Техника
                                         </div>
                                         <div class="total-mob__list-price">
-                                            <div class="total-mob__list-price-new">753 012 ₸</div>
-                                            <div class="total-mob__list-price-old">753 012 ₸</div>
+                                            <div class="total-mob__list-price-new">753 012 &#8376;</div>
+                                            <div class="total-mob__list-price-old">753 012 &#8376;</div>
                                         </div>
                                     </li>
                                     <li>
@@ -500,8 +500,8 @@
                                             Техника
                                         </div>
                                         <div class="total-mob__list-price">
-                                            <div class="total-mob__list-price-new">753 012 ₸</div>
-                                            <div class="total-mob__list-price-old">753 012 ₸</div>
+                                            <div class="total-mob__list-price-new">753 012 &#8376;</div>
+                                            <div class="total-mob__list-price-old">753 012 &#8376;</div>
                                         </div>
                                     </li>
                                     <li>
@@ -509,8 +509,8 @@
                                             Техника
                                         </div>
                                         <div class="total-mob__list-price">
-                                            <div class="total-mob__list-price-new">753 012 ₸</div>
-                                            <div class="total-mob__list-price-old">753 012 ₸</div>
+                                            <div class="total-mob__list-price-new">753 012 &#8376;</div>
+                                            <div class="total-mob__list-price-old">753 012 &#8376;</div>
                                         </div>
                                     </li>
                                     <li>
@@ -518,8 +518,8 @@
                                             Техника
                                         </div>
                                         <div class="total-mob__list-price">
-                                            <div class="total-mob__list-price-new">753 012 ₸</div>
-                                            <div class="total-mob__list-price-old">753 012 ₸</div>
+                                            <div class="total-mob__list-price-new">753 012 &#8376;</div>
+                                            <div class="total-mob__list-price-old">753 012 &#8376;</div>
                                         </div>
                                     </li>
                                     <li>
@@ -527,8 +527,8 @@
                                             Техника
                                         </div>
                                         <div class="total-mob__list-price">
-                                            <div class="total-mob__list-price-new">753 012 ₸</div>
-                                            <div class="total-mob__list-price-old">753 012 ₸</div>
+                                            <div class="total-mob__list-price-new">753 012 &#8376;</div>
+                                            <div class="total-mob__list-price-old">753 012 &#8376;</div>
                                         </div>
                                     </li>
                                     <li>
@@ -536,8 +536,8 @@
                                             Техника
                                         </div>
                                         <div class="total-mob__list-price">
-                                            <div class="total-mob__list-price-new">753 012 ₸</div>
-                                            <div class="total-mob__list-price-old">753 012 ₸</div>
+                                            <div class="total-mob__list-price-new">753 012 &#8376;</div>
+                                            <div class="total-mob__list-price-old">753 012 &#8376;</div>
                                         </div>
                                     </li>
                                 </ul>
@@ -550,14 +550,14 @@
                                 </div>
                                 <div class="total-mob__price">
                                     <div class="total-mob__price-new">
-                                        21 670 193 ₸
+                                        21 670 193 &#8376;
                                     </div>
                                     <div class="total-mob__price-old">
-                                        21 813 947 ₸
+                                        21 813 947 &#8376;
                                     </div>
                                 </div>
                                 <div class="total-mob__discount">
-                                    Вы экономите 143 754 ₸ 
+                                    Вы экономите 143 754 &#8376; 
                                 </div>
                             </div>
                             <button class="total-mob__next button button1">
