--- a/src/onboarding3.html
+++ b/src/onboarding3.html
@@ -136,7 +136,7 @@
                                                         Прайм
                                                     </div>
                                                     <div class="package2__price">
-                                                        117 900 <span>₸/м²</span>
+                                                        117 900 <span>&#8376;/м²</span>
                                                     </div>
                                                     <ul class="package2__desc">
                                                         <li>
@@ -175,7 +175,7 @@
                                                         Урбан
                                                     </div>
                                                     <div class="package2__price">
-                                                        123 900 <span>₸/м²</span>
+                                                        123 900 <span>&#8376;/м²</span>
                                                     </div>
                                                     <ul class="package2__desc">
                                                         <li>
@@ -457,7 +457,7 @@
                                                     Прайм
                                                 </div>
                                                 <div class="package2__price">
-                                                    117 900 <span>₸/м²</span>
+                                                    117 900 <span>&#8376;/м²</span>
                                                 </div>
                                                 <ul class="package2__desc">
                                                     <li>
@@ -496,7 +496,7 @@
                                                     Урбан
                                                 </div>
                                                 <div class="package2__price">
-                                                    123 900 <span>₸/м²</span>
+                                                    123 900 <span>&#8376;/м²</span>
                                                 </div>
                                                 <ul class="package2__desc">
                                                     <li>
