--- a/src/checkout4.html
+++ b/src/checkout4.html
@@ -71,7 +71,7 @@
                                             Пакет “Урбан”
                                         </div>
                                         <div class="checkout-services__price">
-                                            20 763 162 ₸
+                                            20 763 162 &#8376;
                                         </div>
                                     </div>
                                     <div class="checkout-services__points">
@@ -116,7 +116,7 @@
                                         </div>
                                     </div>
                                     <div class="inform">
-                                        Отдельно материалы можно купить только если общая цена превышает 1 000 000 ₸. Для составления точной сметы вы можете оставить заявку на вызов замерщика
+                                        Отдельно материалы можно купить только если общая цена превышает 1 000 000 &#8376;. Для составления точной сметы вы можете оставить заявку на вызов замерщика
                                     </div>
                                 </div>
                             </div>
@@ -151,7 +151,7 @@
                                                     Цена/Штука
                                                 </div>
                                                 <div class="checkout-material__price-num">
-                                                    52 000 ₸
+                                                    52 000 &#8376;
                                                 </div>
                                             </div>
                                             <div class="checkout-material__add">
@@ -182,7 +182,7 @@
                                                     Цена/Штука
                                                 </div>
                                                 <div class="checkout-material__price-num">
-                                                    52 000 ₸
+                                                    52 000 &#8376;
                                                 </div>
                                             </div>
                                             <div class="checkout-material__quantity">
@@ -207,7 +207,7 @@
                                                         Итого 
                                                     </div>
                                                     <div class="checkout-material__total-num">
-                                                        52 000 ₸ 
+                                                        52 000 &#8376; 
                                                     </div>
                                                 </div>
                                             </div>
@@ -241,7 +241,7 @@
                                                     Цена/Штука
                                                 </div>
                                                 <div class="checkout-material__price-num">
-                                                    52 000 ₸
+                                                    52 000 &#8376;
                                                 </div>
                                             </div>
                                             <div class="checkout-material__quantity">
@@ -266,7 +266,7 @@
                                                         Итого 
                                                     </div>
                                                     <div class="checkout-material__total-num">
-                                                        52 000 ₸ 
+                                                        52 000 &#8376; 
                                                     </div>
                                                 </div>
                                             </div>
@@ -293,7 +293,7 @@
                                                     Цена/Штука
                                                 </div>
                                                 <div class="checkout-material__price-num">
-                                                    52 000 ₸
+                                                    52 000 &#8376;
                                                 </div>
                                             </div>
                                             <div class="checkout-material__quantity">
@@ -318,7 +318,7 @@
                                                         Итого 
                                                     </div>
                                                     <div class="checkout-material__total-num">
-                                                        52 000 ₸ 
+                                                        52 000 &#8376; 
                                                     </div>
                                                 </div>
                                             </div>
@@ -354,7 +354,7 @@
                                                     Цена/Штука
                                                 </div>
                                                 <div class="checkout-material__price-num">
-                                                    52 000 ₸
+                                                    52 000 &#8376;
                                                 </div>
                                             </div>
                                             <div class="checkout-material__quantity">
@@ -379,7 +379,7 @@
                                                         Итого 
                                                     </div>
                                                     <div class="checkout-material__total-num">
-                                                        52 000 ₸ 
+                                                        52 000 &#8376; 
                                                     </div>
                                                 </div>
                                             </div>
@@ -413,7 +413,7 @@
                                                 </div>
                                             </div>
                                             <div class="checkout__check-price">
-                                                751 370 ₸
+                                                751 370 &#8376;
                                             </div>
                                         </label>
                                     </div>
@@ -434,7 +434,7 @@
                                         </div>
                                         <div class="checkout-material__dropdown">
                                             <div class="checkout-material__price2">
-                                                82 590 ₸
+                                                82 590 &#8376;
                                             </div>
                                             <div class="checkout-material__one">
                                                 <div class="checkout-material__one-title">
@@ -472,14 +472,14 @@
                         <div class="total__inner">
                             <div class="total__price">
                                 <div class="total__price-discount">
-                                    Итого с учетом скидок вы экономите 143 754 ₸ 
+                                    Итого с учетом скидок вы экономите 143 754 &#8376; 
                                 </div>
                                 <div class="total__price-wrapper">
                                     <div class="total__price-new">
-                                        21 670 193 ₸
+                                        21 670 193 &#8376;
                                     </div>
                                     <div class="total__price-old">
-                                        21 813 947 ₸
+                                        21 813 947 &#8376;
                                     </div>
                                 </div>
                             </div>
@@ -490,7 +490,7 @@
                                     </div>
                                     <div class="total__item-price">
                                         <div class="total__item-price-new">
-                                            20 763 162 ₸ 
+                                            20 763 162 &#8376; 
                                         </div>
                                     </div>
                                 </li>
@@ -500,10 +500,10 @@
                                     </div>
                                     <div class="total__item-price">
                                         <div class="total__item-price-new">
-                                            154 019 ₸ 
+                                            154 019 &#8376; 
                                         </div>
                                         <div class="total__item-price-old">
-                                            168 370 ₸
+                                            168 370 &#8376;
                                         </div>
                                     </div>
                                 </li>
@@ -513,10 +513,10 @@
                                     </div>
                                     <div class="total__item-price">
                                         <div class="total__item-price-new">
-                                            753 012 ₸ 
+                                            753 012 &#8376; 
                                         </div>
                                         <div class="total__item-price-old">
-                                            828 370 ₸
+                                            828 370 &#8376;
                                         </div>
                                     </div>
                                 </li>
@@ -538,7 +538,7 @@
                                             SmartRemont: 
                                         </div>
                                         <div class="total-mob__list-price">
-                                            <div class="total-mob__list-price-new">20 763 162 ₸</div>
+                                            <div class="total-mob__list-price-new">20 763 162 &#8376;</div>
                                         </div>
                                     </li>
                                     <li>
@@ -546,8 +546,8 @@
                                             Наполнение
                                         </div>
                                         <div class="total-mob__list-price">
-                                            <div class="total-mob__list-price-new">154 019 ₸</div>
-                                            <div class="total-mob__list-price-old">184 200 ₸</div>
+                                            <div class="total-mob__list-price-new">154 019 &#8376;</div>
+                                            <div class="total-mob__list-price-old">184 200 &#8376;</div>
                                         </div>
                                     </li>
                                     <li>
@@ -555,8 +555,8 @@
                                             Техника
                                         </div>
                                         <div class="total-mob__list-price">
-                                            <div class="total-mob__list-price-new">753 012 ₸</div>
-                                            <div class="total-mob__list-price-old">753 012 ₸</div>
+                                            <div class="total-mob__list-price-new">753 012 &#8376;</div>
+                                            <div class="total-mob__list-price-old">753 012 &#8376;</div>
                                         </div>
                                     </li>
                                     <li>
@@ -564,8 +564,8 @@
                                             Техника
                                         </div>
                                         <div class="total-mob__list-price">
-                                            <div class="total-mob__list-price-new">753 012 ₸</div>
-                                            <div class="total-mob__list-price-old">753 012 ₸</div>
+                                            <div class="total-mob__list-price-new">753 012 &#8376;</div>
+                                            <div class="total-mob__list-price-old">753 012 &#8376;</div>
                                         </div>
                                     </li>
                                     <li>
@@ -573,8 +573,8 @@
                                             Техника
                                         </div>
                                         <div class="total-mob__list-price">
-                                            <div class="total-mob__list-price-new">753 012 ₸</div>
-                                            <div class="total-mob__list-price-old">753 012 ₸</div>
+                                            <div class="total-mob__list-price-new">753 012 &#8376;</div>
+                                            <div class="total-mob__list-price-old">753 012 &#8376;</div>
                                         </div>
                                     </li>
                                     <li>
@@ -582,8 +582,8 @@
                                             Техника
                                         </div>
                                         <div class="total-mob__list-price">
-                                            <div class="total-mob__list-price-new">753 012 ₸</div>
-                                            <div class="total-mob__list-price-old">753 012 ₸</div>
+                                            <div class="total-mob__list-price-new">753 012 &#8376;</div>
+                                            <div class="total-mob__list-price-old">753 012 &#8376;</div>
                                         </div>
                                     </li>
                                     <li>
@@ -591,8 +591,8 @@
                                             Техника
                                         </div>
                                         <div class="total-mob__list-price">
-                                            <div class="total-mob__list-price-new">753 012 ₸</div>
-                                            <div class="total-mob__list-price-old">753 012 ₸</div>
+                                            <div class="total-mob__list-price-new">753 012 &#8376;</div>
+                                            <div class="total-mob__list-price-old">753 012 &#8376;</div>
                                         </div>
                                     </li>
                                     <li>
@@ -600,8 +600,8 @@
                                             Техника
                                         </div>
                                         <div class="total-mob__list-price">
-                                            <div class="total-mob__list-price-new">753 012 ₸</div>
-                                            <div class="total-mob__list-price-old">753 012 ₸</div>
+                                            <div class="total-mob__list-price-new">753 012 &#8376;</div>
+                                            <div class="total-mob__list-price-old">753 012 &#8376;</div>
                                         </div>
                                     </li>
                                     <li>
@@ -609,8 +609,8 @@
                                             Техника
                                         </div>
                                         <div class="total-mob__list-price">
-                                            <div class="total-mob__list-price-new">753 012 ₸</div>
-                                            <div class="total-mob__list-price-old">753 012 ₸</div>
+                                            <div class="total-mob__list-price-new">753 012 &#8376;</div>
+                                            <div class="total-mob__list-price-old">753 012 &#8376;</div>
                                         </div>
                                     </li>
                                 </ul>
@@ -623,14 +623,14 @@
                                 </div>
                                 <div class="total-mob__price">
                                     <div class="total-mob__price-new">
-                                        21 670 193 ₸
+                                        21 670 193 &#8376;
                                     </div>
                                     <div class="total-mob__price-old">
-                                        21 813 947 ₸
+                                        21 813 947 &#8376;
                                     </div>
                                 </div>
                                 <div class="total-mob__discount">
-                                    Вы экономите 143 754 ₸ 
+                                    Вы экономите 143 754 &#8376; 
                                 </div>
                             </div>
                             <button class="total-mob__next button button1">
