--- a/src/finishing-shower.html
+++ b/src/finishing-shower.html
@@ -30,7 +30,7 @@
                                             Отделка
                                         </div>
                                         <div class="aside-constructor__item-price">
-                                            <span>20 763 162</span> ₸ 
+                                            <span>20 763 162</span> &#8376; 
                                         </div>
                                     </div>    
                                     <div class="aside-constructor__item">
@@ -38,7 +38,7 @@
                                             Наполнение
                                         </div>
                                         <div class="aside-constructor__item-price">
-                                            <span>154 019</span> ₸ 
+                                            <span>154 019</span> &#8376; 
                                         </div>
                                     </div>    
                                     <div class="aside-constructor__item">
@@ -46,7 +46,7 @@
                                             Техника
                                         </div>
                                         <div class="aside-constructor__item-price">
-                                            <span>753 012</span> ₸  
+                                            <span>753 012</span> &#8376;  
                                         </div>
                                     </div>    
                                 </div>
@@ -71,10 +71,10 @@
                                                 </div>
                                                 <div class="finishing__item-price">
                                                     <div class="finishing__item-price-new">
-                                                        20 763 162 ₸
+                                                        20 763 162 &#8376;
                                                     </div>
                                                     <div class="finishing__item-price-meter">
-                                                        123 900 ₸/м²
+                                                        123 900 &#8376;/м²
                                                     </div>
                                                 </div>
                                             </div>
@@ -95,10 +95,10 @@
                                                 </div>
                                                 <div class="finishing__item-price">
                                                     <div class="finishing__item-price-new">
-                                                        20 763 162 ₸
+                                                        20 763 162 &#8376;
                                                     </div>
                                                     <div class="finishing__item-price-meter">
-                                                        123 900 ₸/м²
+                                                        123 900 &#8376;/м²
                                                     </div>
                                                 </div>
                                             </div>
@@ -218,7 +218,7 @@
                                                     </div>
                                                     <div class="finishing__select-wrapper">
                                                         <div class="finishing__select-meter">
-                                                            123 900 ₸/метр
+                                                            123 900 &#8376;/метр
                                                         </div>
                                                         <div class="packs__cost">
                                                             <div class="packs__cost-icon _active">
@@ -257,7 +257,7 @@
                                                     </div>
                                                     <div class="finishing__select-wrapper">
                                                         <div class="finishing__select-meter">
-                                                            46 900 ₸/метр
+                                                            46 900 &#8376;/метр
                                                         </div>
                                                         <div class="packs__cost">
                                                             <div class="packs__cost-icon _active">
@@ -290,7 +290,7 @@
                                                     </div>
                                                     <div class="finishing__select-wrapper">
                                                         <div class="finishing__select-meter">
-                                                            56 900 ₸/метр
+                                                            56 900 &#8376;/метр
                                                         </div>
                                                         <div class="packs__cost">
                                                             <div class="packs__cost-icon _active">
@@ -323,7 +323,7 @@
                                                     </div>
                                                     <div class="finishing__select-wrapper">
                                                         <div class="finishing__select-meter">
-                                                            68 900 ₸/метр
+                                                            68 900 &#8376;/метр
                                                         </div>
                                                         <div class="packs__cost">
                                                             <div class="packs__cost-icon _active">
@@ -356,7 +356,7 @@
                                                     </div>
                                                     <div class="finishing__select-wrapper">
                                                         <div class="finishing__select-meter">
-                                                            69 900 ₸/метр
+                                                            69 900 &#8376;/метр
                                                         </div>
                                                         <div class="packs__cost">
                                                             <div class="packs__cost-icon _active">
@@ -388,7 +388,7 @@
                                                     </div>
                                                     <div class="finishing__select-wrapper">
                                                         <div class="finishing__select-meter">
-                                                            82 900 ₸/метр
+                                                            82 900 &#8376;/метр
                                                         </div>
                                                         <div class="packs__cost">
                                                             <div class="packs__cost-icon _active">
@@ -420,7 +420,7 @@
                                                     </div>
                                                     <div class="finishing__select-wrapper">
                                                         <div class="finishing__select-meter">
-                                                            85 900 ₸/метр
+                                                            85 900 &#8376;/метр
                                                         </div>
                                                         <div class="packs__cost">
                                                             <div class="packs__cost-icon _active">
@@ -452,7 +452,7 @@
                                                     </div>
                                                     <div class="finishing__select-wrapper">
                                                         <div class="finishing__select-meter">
-                                                            85 900 ₸/метр
+                                                            85 900 &#8376;/метр
                                                         </div>
                                                         <div class="packs__cost">
                                                             <div class="packs__cost-icon _active">
@@ -484,7 +484,7 @@
                                                     </div>
                                                     <div class="finishing__select-wrapper">
                                                         <div class="finishing__select-meter">
-                                                            117 900 ₸/метр
+                                                            117 900 &#8376;/метр
                                                         </div>
                                                         <div class="packs__cost">
                                                             <div class="packs__cost-icon _active">
@@ -923,14 +923,14 @@
                         <div class="total__inner">
                             <div class="total__price">
                                 <div class="total__price-discount">
-                                    Итого с учетом скидок вы экономите 143 754 ₸ 
+                                    Итого с учетом скидок вы экономите 143 754 &#8376; 
                                 </div>
                                 <div class="total__price-wrapper">
                                     <div class="total__price-new">
-                                        21 670 193 ₸
+                                        21 670 193 &#8376;
                                     </div>
                                     <div class="total__price-old">
-                                        21 813 947 ₸
+                                        21 813 947 &#8376;
                                     </div>
                                 </div>
                             </div>
@@ -941,7 +941,7 @@
                                     </div>
                                     <div class="total__item-price">
                                         <div class="total__item-price-new">
-                                            20 763 162 ₸ 
+                                            20 763 162 &#8376; 
                                         </div>
                                     </div>
                                 </li>
@@ -951,10 +951,10 @@
                                     </div>
                                     <div class="total__item-price">
                                         <div class="total__item-price-new">
-                                            154 019 ₸ 
+                                            154 019 &#8376; 
                                         </div>
                                         <div class="total__item-price-old">
-                                            168 370 ₸
+                                            168 370 &#8376;
                                         </div>
                                     </div>
                                 </li>
@@ -964,10 +964,10 @@
                                     </div>
                                     <div class="total__item-price">
                                         <div class="total__item-price-new">
-                                            753 012 ₸ 
+                                            753 012 &#8376; 
                                         </div>
                                         <div class="total__item-price-old">
-                                            828 370 ₸
+                                            828 370 &#8376;
                                         </div>
                                     </div>
                                 </li>
@@ -989,7 +989,7 @@
                                             SmartRemont: 
                                         </div>
                                         <div class="total-mob__list-price">
-                                            <div class="total-mob__list-price-new">20 763 162 ₸</div>
+                                            <div class="total-mob__list-price-new">20 763 162 &#8376;</div>
                                         </div>
                                     </li>
                                     <li>
@@ -997,8 +997,8 @@
                                             Наполнение
                                         </div>
                                         <div class="total-mob__list-price">
-                                            <div class="total-mob__list-price-new">154 019 ₸</div>
-                                            <div class="total-mob__list-price-old">184 200 ₸</div>
+                                            <div class="total-mob__list-price-new">154 019 &#8376;</div>
+                                            <div class="total-mob__list-price-old">184 200 &#8376;</div>
                                         </div>
                                     </li>
                                     <li>
@@ -1006,8 +1006,8 @@
                                             Техника
                                         </div>
                                         <div class="total-mob__list-price">
-                                            <div class="total-mob__list-price-new">753 012 ₸</div>
-                                            <div class="total-mob__list-price-old">753 012 ₸</div>
+                                            <div class="total-mob__list-price-new">753 012 &#8376;</div>
+                                            <div class="total-mob__list-price-old">753 012 &#8376;</div>
                                         </div>
                                     </li>
                                     <li>
@@ -1015,8 +1015,8 @@
                                             Техника
                                         </div>
                                         <div class="total-mob__list-price">
-                                            <div class="total-mob__list-price-new">753 012 ₸</div>
-                                            <div class="total-mob__list-price-old">753 012 ₸</div>
+                                            <div class="total-mob__list-price-new">753 012 &#8376;</div>
+                                            <div class="total-mob__list-price-old">753 012 &#8376;</div>
                                         </div>
                                     </li>
                                     <li>
@@ -1024,8 +1024,8 @@
                                             Техника
                                         </div>
                                         <div class="total-mob__list-price">
-                                            <div class="total-mob__list-price-new">753 012 ₸</div>
-                                            <div class="total-mob__list-price-old">753 012 ₸</div>
+                                            <div class="total-mob__list-price-new">753 012 &#8376;</div>
+                                            <div class="total-mob__list-price-old">753 012 &#8376;</div>
                                         </div>
                                     </li>
                                     <li>
@@ -1033,8 +1033,8 @@
                                             Техника
                                         </div>
                                         <div class="total-mob__list-price">
-                                            <div class="total-mob__list-price-new">753 012 ₸</div>
-                                            <div class="total-mob__list-price-old">753 012 ₸</div>
+                                            <div class="total-mob__list-price-new">753 012 &#8376;</div>
+                                            <div class="total-mob__list-price-old">753 012 &#8376;</div>
                                         </div>
                                     </li>
                                     <li>
@@ -1042,8 +1042,8 @@
                                             Техника
                                         </div>
                                         <div class="total-mob__list-price">
-                                            <div class="total-mob__list-price-new">753 012 ₸</div>
-                                            <div class="total-mob__list-price-old">753 012 ₸</div>
+                                            <div class="total-mob__list-price-new">753 012 &#8376;</div>
+                                            <div class="total-mob__list-price-old">753 012 &#8376;</div>
                                         </div>
                                     </li>
                                     <li>
@@ -1051,8 +1051,8 @@
                                             Техника
                                         </div>
                                         <div class="total-mob__list-price">
-                                            <div class="total-mob__list-price-new">753 012 ₸</div>
-                                            <div class="total-mob__list-price-old">753 012 ₸</div>
+                                            <div class="total-mob__list-price-new">753 012 &#8376;</div>
+                                            <div class="total-mob__list-price-old">753 012 &#8376;</div>
                                         </div>
                                     </li>
                                     <li>
@@ -1060,8 +1060,8 @@
                                             Техника
                                         </div>
                                         <div class="total-mob__list-price">
-                                            <div class="total-mob__list-price-new">753 012 ₸</div>
-                                            <div class="total-mob__list-price-old">753 012 ₸</div>
+                                            <div class="total-mob__list-price-new">753 012 &#8376;</div>
+                                            <div class="total-mob__list-price-old">753 012 &#8376;</div>
                                         </div>
                                     </li>
                                 </ul>
@@ -1074,14 +1074,14 @@
                                 </div>
                                 <div class="total-mob__price">
                                     <div class="total-mob__price-new">
-                                        21 670 193 ₸
+                                        21 670 193 &#8376;
                                     </div>
                                     <div class="total-mob__price-old">
-                                        21 813 947 ₸
+                                        21 813 947 &#8376;
                                     </div>
                                 </div>
                                 <div class="total-mob__discount">
-                                    Вы экономите 143 754 ₸ 
+                                    Вы экономите 143 754 &#8376; 
                                 </div>
                             </div>
                             <button class="total-mob__next button button1">
