--- a/src/onboarding1.html
+++ b/src/onboarding1.html
@@ -222,7 +222,7 @@
                                                     Прайм
                                                 </div>
                                                 <div class="package2__price">
-                                                    117 900 <span>₸/м²</span>
+                                                    117 900 <span>&#8376;/м²</span>
                                                 </div>
                                                 <ul class="package2__desc">
                                                     <li>
@@ -261,7 +261,7 @@
                                                     Урбан
                                                 </div>
                                                 <div class="package2__price">
-                                                    123 900 <span>₸/м²</span>
+                                                    123 900 <span>&#8376;/м²</span>
                                                 </div>
                                                 <ul class="package2__desc">
                                                     <li>
