--- a/src/packages-category.html
+++ b/src/packages-category.html
@@ -30,7 +30,7 @@
                                             Отделка
                                         </div>
                                         <div class="aside-constructor__item-price">
-                                            <span>20 763 162</span> ₸ 
+                                            <span>20 763 162</span> &#8376; 
                                         </div>
                                     </div>    
                                     <div class="aside-constructor__item">
@@ -38,7 +38,7 @@
                                             Наполнение
                                         </div>
                                         <div class="aside-constructor__item-price">
-                                            <span>154 019</span> ₸ 
+                                            <span>154 019</span> &#8376; 
                                         </div>
                                     </div>    
                                     <div class="aside-constructor__item _active">
@@ -46,7 +46,7 @@
                                             Техника
                                         </div>
                                         <div class="aside-constructor__item-price">
-                                            <span>753 012</span> ₸  
+                                            <span>753 012</span> &#8376;  
                                         </div>
                                     </div>    
                                 </div>
@@ -70,10 +70,10 @@
                                             </div>
                                             <div class="filling-product__price">
                                                 <div class="filling-product__price-new">
-                                                    493 368 ₸
+                                                    493 368 &#8376;
                                                 </div>
                                                 <div class="filling-product__price-old">
-                                                    586 137 ₸
+                                                    586 137 &#8376;
                                                 </div>
                                                 <div class="filling-product__discount">
                                                     -20%
@@ -94,10 +94,10 @@
                                             </div>
                                             <div class="filling-product__price">
                                                 <div class="filling-product__price-new">
-                                                    82 500 ₸
+                                                    82 500 &#8376;
                                                 </div>
                                                 <div class="filling-product__price-old">
-                                                    82 500 ₸
+                                                    82 500 &#8376;
                                                 </div>
                                             </div>
                                         </div>
@@ -280,10 +280,10 @@
                                         </div>
                                         <div class="filling-item__price">
                                             <div class="filling-item__price-new">
-                                                82 590 ₸
+                                                82 590 &#8376;
                                             </div>
                                             <div class="filling-item__price-old">
-                                                109 900 ₸.
+                                                109 900 &#8376;.
                                             </div>
                                         </div>
                                         <div class="filling-item__quantity">
@@ -318,10 +318,10 @@
                                         </div>
                                         <div class="filling-item__price">
                                             <div class="filling-item__price-new">
-                                                82 590 ₸
+                                                82 590 &#8376;
                                             </div>
                                             <div class="filling-item__price-old">
-                                                109 900 ₸.
+                                                109 900 &#8376;.
                                             </div>
                                         </div>
                                         <button class="filling-item__add button button1">
@@ -343,10 +343,10 @@
                                         </div>
                                         <div class="filling-item__price">
                                             <div class="filling-item__price-new">
-                                                82 590 ₸
+                                                82 590 &#8376;
                                             </div>
                                             <div class="filling-item__price-old">
-                                                109 900 ₸.
+                                                109 900 &#8376;.
                                             </div>
                                         </div>
                                         <div class="filling-item__quantity">
@@ -381,10 +381,10 @@
                                         </div>
                                         <div class="filling-item__price">
                                             <div class="filling-item__price-new">
-                                                82 590 ₸
+                                                82 590 &#8376;
                                             </div>
                                             <div class="filling-item__price-old">
-                                                109 900 ₸.
+                                                109 900 &#8376;.
                                             </div>
                                         </div>
                                         <div class="filling-item__quantity">
@@ -419,10 +419,10 @@
                                         </div>
                                         <div class="filling-item__price">
                                             <div class="filling-item__price-new">
-                                                82 590 ₸
+                                                82 590 &#8376;
                                             </div>
                                             <div class="filling-item__price-old">
-                                                109 900 ₸.
+                                                109 900 &#8376;.
                                             </div>
                                         </div>
                                         <div class="filling-item__quantity">
@@ -457,10 +457,10 @@
                                         </div>
                                         <div class="filling-item__price">
                                             <div class="filling-item__price-new">
-                                                82 590 ₸
+                                                82 590 &#8376;
                                             </div>
                                             <div class="filling-item__price-old">
-                                                109 900 ₸.
+                                                109 900 &#8376;.
                                             </div>
                                         </div>
                                         <div class="filling-item__quantity">
@@ -495,10 +495,10 @@
                                         </div>
                                         <div class="filling-item__price">
                                             <div class="filling-item__price-new">
-                                                82 590 ₸
+                                                82 590 &#8376;
                                             </div>
                                             <div class="filling-item__price-old">
-                                                109 900 ₸.
+                                                109 900 &#8376;.
                                             </div>
                                         </div>
                                         <div class="filling-item__quantity">
@@ -533,10 +533,10 @@
                                         </div>
                                         <div class="filling-item__price">
                                             <div class="filling-item__price-new">
-                                                82 590 ₸
+                                                82 590 &#8376;
                                             </div>
                                             <div class="filling-item__price-old">
-                                                109 900 ₸.
+                                                109 900 &#8376;.
                                             </div>
                                         </div>
                                         <div class="filling-item__quantity">
@@ -572,14 +572,14 @@
                         <div class="total__inner">
                             <div class="total__price">
                                 <div class="total__price-discount">
-                                    Итого с учетом скидок вы экономите 143 754 ₸ 
+                                    Итого с учетом скидок вы экономите 143 754 &#8376; 
                                 </div>
                                 <div class="total__price-wrapper">
                                     <div class="total__price-new">
-                                        21 670 193 ₸
+                                        21 670 193 &#8376;
                                     </div>
                                     <div class="total__price-old">
-                                        21 813 947 ₸
+                                        21 813 947 &#8376;
                                     </div>
                                 </div>
                             </div>
@@ -590,7 +590,7 @@
                                     </div>
                                     <div class="total__item-price">
                                         <div class="total__item-price-new">
-                                            20 763 162 ₸ 
+                                            20 763 162 &#8376; 
                                         </div>
                                     </div>
                                 </li>
@@ -600,10 +600,10 @@
                                     </div>
                                     <div class="total__item-price">
                                         <div class="total__item-price-new">
-                                            154 019 ₸ 
+                                            154 019 &#8376; 
                                         </div>
                                         <div class="total__item-price-old">
-                                            168 370 ₸
+                                            168 370 &#8376;
                                         </div>
                                     </div>
                                 </li>
@@ -613,10 +613,10 @@
                                     </div>
                                     <div class="total__item-price">
                                         <div class="total__item-price-new">
-                                            753 012 ₸ 
+                                            753 012 &#8376; 
                                         </div>
                                         <div class="total__item-price-old">
-                                            828 370 ₸
+                                            828 370 &#8376;
                                         </div>
                                     </div>
                                 </li>
@@ -638,7 +638,7 @@
                                             SmartRemont: 
                                         </div>
                                         <div class="total-mob__list-price">
-                                            <div class="total-mob__list-price-new">20 763 162 ₸</div>
+                                            <div class="total-mob__list-price-new">20 763 162 &#8376;</div>
                                         </div>
                                     </li>
                                     <li>
@@ -646,8 +646,8 @@
                                             Наполнение
                                         </div>
                                         <div class="total-mob__list-price">
-                                            <div class="total-mob__list-price-new">154 019 ₸</div>
-                                            <div class="total-mob__list-price-old">184 200 ₸</div>
+                                            <div class="total-mob__list-price-new">154 019 &#8376;</div>
+                                            <div class="total-mob__list-price-old">184 200 &#8376;</div>
                                         </div>
                                     </li>
                                     <li>
@@ -655,8 +655,8 @@
                                             Техника
                                         </div>
                                         <div class="total-mob__list-price">
-                                            <div class="total-mob__list-price-new">753 012 ₸</div>
-                                            <div class="total-mob__list-price-old">753 012 ₸</div>
+                                            <div class="total-mob__list-price-new">753 012 &#8376;</div>
+                                            <div class="total-mob__list-price-old">753 012 &#8376;</div>
                                         </div>
                                     </li>
                                     <li>
@@ -664,8 +664,8 @@
                                             Техника
                                         </div>
                                         <div class="total-mob__list-price">
-                                            <div class="total-mob__list-price-new">753 012 ₸</div>
-                                            <div class="total-mob__list-price-old">753 012 ₸</div>
+                                            <div class="total-mob__list-price-new">753 012 &#8376;</div>
+                                            <div class="total-mob__list-price-old">753 012 &#8376;</div>
                                         </div>
                                     </li>
                                     <li>
@@ -673,8 +673,8 @@
                                             Техника
                                         </div>
                                         <div class="total-mob__list-price">
-                                            <div class="total-mob__list-price-new">753 012 ₸</div>
-                                            <div class="total-mob__list-price-old">753 012 ₸</div>
+                                            <div class="total-mob__list-price-new">753 012 &#8376;</div>
+                                            <div class="total-mob__list-price-old">753 012 &#8376;</div>
                                         </div>
                                     </li>
                                     <li>
@@ -682,8 +682,8 @@
                                             Техника
                                         </div>
                                         <div class="total-mob__list-price">
-                                            <div class="total-mob__list-price-new">753 012 ₸</div>
-                                            <div class="total-mob__list-price-old">753 012 ₸</div>
+                                            <div class="total-mob__list-price-new">753 012 &#8376;</div>
+                                            <div class="total-mob__list-price-old">753 012 &#8376;</div>
                                         </div>
                                     </li>
                                     <li>
@@ -691,8 +691,8 @@
                                             Техника
                                         </div>
                                         <div class="total-mob__list-price">
-                                            <div class="total-mob__list-price-new">753 012 ₸</div>
-                                            <div class="total-mob__list-price-old">753 012 ₸</div>
+                                            <div class="total-mob__list-price-new">753 012 &#8376;</div>
+                                            <div class="total-mob__list-price-old">753 012 &#8376;</div>
                                         </div>
                                     </li>
                                     <li>
@@ -700,8 +700,8 @@
                                             Техника
                                         </div>
                                         <div class="total-mob__list-price">
-                                            <div class="total-mob__list-price-new">753 012 ₸</div>
-                                            <div class="total-mob__list-price-old">753 012 ₸</div>
+                                            <div class="total-mob__list-price-new">753 012 &#8376;</div>
+                                            <div class="total-mob__list-price-old">753 012 &#8376;</div>
                                         </div>
                                     </li>
                                     <li>
@@ -709,8 +709,8 @@
                                             Техника
                                         </div>
                                         <div class="total-mob__list-price">
-                                            <div class="total-mob__list-price-new">753 012 ₸</div>
-                                            <div class="total-mob__list-price-old">753 012 ₸</div>
+                                            <div class="total-mob__list-price-new">753 012 &#8376;</div>
+                                            <div class="total-mob__list-price-old">753 012 &#8376;</div>
                                         </div>
                                     </li>
                                 </ul>
@@ -723,14 +723,14 @@
                                 </div>
                                 <div class="total-mob__price">
                                     <div class="total-mob__price-new">
-                                        21 670 193 ₸
+                                        21 670 193 &#8376;
                                     </div>
                                     <div class="total-mob__price-old">
-                                        21 813 947 ₸
+                                        21 813 947 &#8376;
                                     </div>
                                 </div>
                                 <div class="total-mob__discount">
-                                    Вы экономите 143 754 ₸ 
+                                    Вы экономите 143 754 &#8376; 
                                 </div>
                             </div>
                             <button class="total-mob__next button button1">
